Fix: Overflow in testimonials section

--- a/src/components/home/Testimonials/Testimonials.module.sass
+++ b/src/components/home/Testimonials/Testimonials.module.sass
@@ -4,7 +4,7 @@
     align-items: center
     justify-content: center
 
-    height: 66.666vh
+    height: 75vh
     overflow: hidden
     padding: 2rem 0
 
